Hair Primitive as Triangles + Hair shader with a texture = crash #50634

Closed
opened 2017-02-09 18:12:41 +01:00 by ronan ducluzeau · 9 comments

System Information
ubuntu 16.04 64bits and Nvidia Titan Black

Blender Version
Broken: 2.78a and master hash d2f4900
Worked: (optional)

Short description of error
When a texture is used in a Cycles material for Hair; trying Triangles primitive for strands will crash Blender.

With "cull back-faces" option disabled, Triangles primitive helps to have renders using a hair transmission shader without fireflies compared to other primitive types.
But we can not use it at all if it can not support materials with textures.

Exact steps for others to reproduce the error

In attached blend, switch 3DView to rendered view.
You can see hair strands colored by texture.
Switch hair primitive to Triangles. --> Blender crashes.

You can reopen the file, delete the texture in material and change primitive to Triangles.
If you try to render at that moment. Blender does not crash.

Problem also occurs with procedural textures.

hair_prim_texture.blend

**System Information** ubuntu 16.04 64bits and Nvidia Titan Black **Blender Version** Broken: 2.78a and master hash d2f4900 Worked: (optional) **Short description of error** When a texture is used in a Cycles material for Hair; trying Triangles primitive for strands will crash Blender. With "cull back-faces" option disabled, Triangles primitive helps to have renders using a hair transmission shader without fireflies compared to other primitive types. But we can not use it at all if it can not support materials with textures. **Exact steps for others to reproduce the error** In attached blend, switch 3DView to rendered view. You can see hair strands colored by texture. Switch hair primitive to Triangles. --> Blender crashes. You can reopen the file, delete the texture in material and change primitive to Triangles. If you try to render at that moment. Blender does not crash. Problem also occurs with procedural textures. [hair_prim_texture.blend](https://archive.blender.org/developer/F472749/hair_prim_texture.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro
Member

Added subscriber: @TheOnlyJoey

Added subscriber: @TheOnlyJoey
Sergey Sharybin was assigned by Joey Ferwerda 2017-02-09 20:05:17 +01:00
Member

Can confirm, tested on Ubuntu 16.10 rendering on CPU.

Can confirm, tested on Ubuntu 16.10 rendering on CPU.

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

Confirmed on Windoze 7 64 bit too - rendering on GPU (AMD R7 360)

Memoryblock MORE THAN 1 MEMORYBLOCK CORRUPT: error in header
Error: EXCEPTION_ACCESS_VIOLATION
Confirmed on Windoze 7 64 bit too - rendering on GPU (AMD R7 360) ``` Memoryblock MORE THAN 1 MEMORYBLOCK CORRUPT: error in header Error: EXCEPTION_ACCESS_VIOLATION ```

This issue was referenced by blender/cycles@1db6acf9f9

This issue was referenced by blender/cycles@1db6acf9f9dfa0cfe25b5673eef934a9e39becd4

This issue was referenced by f1b21d5960

This issue was referenced by f1b21d5960d94e518c950a932de1ebdd50ad860c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50634
No description provided.